loopwhile.BaggleSeeker.scala.error
Compilation error:
BaggleSeeker:2: error: '(' expected but identifier found.
  else (while isOverBaggle()==false {forward()}) 
              ^BaggleSeeker:4: error: illegal start of simple expression
	}
        ^